when using quarkus dev services, java.base/java.lang modules are *always opened*